# nullmailer

./: Makefile.am  README  gitpush
doc/: nullmailer-send.8
lib/: Makefile.am  config_path.cc  config_read.cc  defines.h  errcodes.cc  errcodes.h  forkexec.cc  forkexec.h  make_defines.sh
protocols/: protocol.cc
src/: send.cc
